[tool.poetry]
name = "fcbayern-analytics"
version = "0.1.0"
description = "Analytics package for FC Bayern match data processing and visualization"
authors = ["Saud Bin Habib <saud.bin.habib@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fcbayern_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.0"
streamlit = "^1.31.0"
plotly = "^5.18.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
